public/stylesheets/common.css
a, a:visited, a:active, a:link, a:hover {
  color: #00f;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

#frontpage_main {
  width: 100%;
  text-align: center;
  font-family: sans-serif;
}


#frontpage_MAIN h1 {
  font-size: xx-large;
  font-weight: normal;
}

body {
  font-family: Arial,sans-serif;
  color: #000;
  background-color: #fff;
  margin: 0px;
  padding: 0px;
}

#left {
  position: absolute;
  top: -8px;
  min-width: 150px;
}

#logo {
  width: 150px;
  min-width: 150px;
  padding: 10px;
  margin: 10px;
  height: 150px;
  background: #fff;
  border: 1px solid #ccd;
}
#logo h1 {
  font-size: 14px;
  text-align: center;
  margin: 0px;
}
#logo h2 {
  font-size: 10px;
  margin: 0px;
}

/* The Map Key sidebar */
#mapkey h3 {
    font-size: 110%;
    font-weight: normal;
    text-align: center;
}

#mapkey .mapkey-table {
    padding-left: 5px;
    padding-right: 5px;
}

/*#mapkey .mapkey-table-key {}*/

#mapkey .mapkey-table-value {
    font-size: 90%;
}


#greeting {
  float: right;
  height: 20px;
  margin: 0px;
  padding-right: 10px;
  padding-top: 5px;
  font-size: 13px;
  line-height: 14px;
  background: url('../images/tab_bottom.gif') repeat-x bottom;
}

#small-greeting {
    display: none;
}

/* An unread message (e.g. "inbox(1)") */
.greeting-bar-unread {
  font-weight: bold;
}

#intro {
  width: 170px;
  margin: 10px;
  border: 1px solid #ccc;
  font-size: 11px;
}

#intro p { margin: 10px; }

#alert {
  width: 150px;
  margin: 10px;
  padding: 10px;
  border: 1px solid #ccc;
  background: #d00;
  line-height: 1.2em;
  text-align: left;
  font-size: 14px;
}

#sotm {
  width: 170px;
  padding: 0px;
}

.notice {
  width: 150px;
  margin: 10px;
  padding: 10px;
  border: 1px solid #ccc;
  background: #ea0;
  line-height: 1.2em;
  text-align: left;
  font-size: 14px;
}

.donate {
  width: 150px;
  margin: 10px;
  padding: 10px;
  border: 1px solid #ccc;
  background: #cbeea7;
  line-height: 1.2em;
  text-align: center;
  font-size: 14px;
}

.left_menu {
  width: 150px;
  min-width: 150px;
  margin: 10px;
  padding: 10px;
  border: 1px solid #ccc;
  left: 0px;
  background: #ddd;
  line-height: 1.2em;
  text-align: Left;
  font-size: 14px;
  font-weight: bold;
}

.left_menu td {
  font-size: 12px;
  padding-right: 4px;
}

.left_menu h1 {
  font-style: normal;
  font-size: 15px;
  padding: 0em 0em 0em 1em;
  text-align: left;
}

.left_menu ul {
  /*list-style: none;*/
  padding-left: 10px;
  margin: 0px;
}

.left_menu li {
  margin: 0px;
  padding: 0px;
}

.left_menu img {
  margin: 2px 8px 0px 0px;
}

.left_menu a, .left_menu a:visited, .left_menu a:active, .left_menu a:link, .left_menu a:hover {
  color: #000;
  text-decoration: none;
}

.left_menu a:hover {
  color: #000;
  text-decoration: underline;
}

#messages {
  border: 1px solid #ccc;
}


#content {
  padding: 0px;
  margin: 0px;
  position: absolute; 
  left: 192px;
  right: 10px;
  top: 35px;
  bottom: 10px;
  line-height: 1.2em;
  text-align: left;
}

#bottom_bar {
  position: absolute;
  bottom: 0px;
  width: 100%;
  font-size: x-small;
  text-align: center;
}

#mapImage {
  position: absolute;
  left: 0px;
}
#drag {
  top: 0px;
  left: 14px;
}

#mapEpilog {
  font-size: x-small;
}

#changeset_list, #keyvalue {
  font-size: small;
  text-align: left;
  border-collapse: collapse;
  border-width: 0px;
}

#changeset_list {
  width: 100%;
}

#changeset_list .date {
  white-space: nowrap;
}

#changeset_list .user {
  white-space: nowrap;
}

#changeset_list .area {
  white-space: nowrap;
}

#changeset_list.th {
  font-weight: bold;
}

.emphasized {
  background-color: #82bcff;
}


#header {
  float: left;
  width: 100%;
  background: #DAE0D2;
  font-size: 93%;
  line-height: normal;
}
#header ul {
  margin: 0px;
  padding: 10px 10px 0px 215px;
  list-style: none;
}
#header li {
  float: left;
  margin: 0px;
  padding: 0px 0px 0px 9px;
}
#header li a {
  float: left;
  display: block;
  padding: 5px 15px 4px 6px;
  text-decoration: none;
  font-weight: bold;
  color: #765;
}

#header li a {float:none;}

#header li a:hover {
  color: #333;
}
#header #current a {
  color: #333;
  padding-bottom: 5px;
}

#tabnav
{
  height: 20px;
  margin: 0px;
  padding-left: 215px;
  padding-top: 5px;
  background: url('../images/tab_bottom.gif') repeat-x bottom;
}
#tabnav li
{
  margin: 0px; 
  padding: 0px;
  display: inline;
  list-style-type: none;
}
#tabnav a, #tabnav a:link, #tabnav a:visited 
{
  float: left;
  background: #f3f3f3;
  font-size: 13px;
  line-height: 14px;
  font-weight: bold;
  padding: 2px 10px;
  margin-right: 4px;
  border: 1px solid #ccc;
  text-decoration: none;
  color: #333;
}
#tabnav a:link.active, #tabnav a:visited.active
{
  border-bottom: 1px solid #fff;
  background: #fff;
  color: #000;
}
#tabnav a:link:hover
{
  background: #fff;
}

#gads {
  /*  position: absolute; */
  left: 100px;
  width: 700px;
  text-align: center;
  font-size: 10px;
}

hr {
  border: none;
  background-color: #ccc;
  color: #ccc;
  height: 1px;
}

.gpxsummary {
  font-size: 12px;
  color: gray;
}

.gpxdesc {
  font-style: italic;
}

.table0 { 
  background: #f6f6f6;
}

.table1 { 
  background: #fff;
}


.optionalbox {
  width: 150px;
  min-width: 150px;
  margin: 10px;
  padding: 10px;
  border: 1px solid #ccc;
  left: 0px;
  line-height: 1.2em;
  text-align: left;
  font-size: 12px;
  background: #eee;
}

.oboxheader {
  font-size: 14px;
  font-weight: bold;
  line-height: 22px;
  vertical-align: bottom;
}

.whereami {
  position: absolute;
  right: 21px;
  line-height: 22px;
  vertical-align: bottom;
}

.optionalbox form {
  margin: 0px;
  padding: 0px;
}

#search_field form {
  width: 100%;
}

#search_field input[type="text"] {
  width: 116px;
}

#search_field input[type="submit"] {
  width: 26px;
}

.search_form {
  height: 16px;
  padding-bottom: 6px;
}

.rsssmall {
  position: relative;
  top: 4px;
}

.button {
  margin-top: 10px;
  margin-bottom: 10px;
}

#controls img
{
  z-index: 9999;
}

#controls
{
  position:absolute;
  top: 0px;
  left: 0px;
  width: 64px;
  height: 32px;
  z-index: 9998;
  cursor: pointer;
}

#map {
  position: absolute;
  border: 1px solid black;
  margin: 0px; 
  padding: 0px;
  left: 0px;
  right: 2px;
  top: 0px;
  bottom: 0px;
}

#sidebar {
  display: none;
  position: absolute;
  border: 1px solid black;
  margin: 0px;
  padding: 0px;
  width: 30%;
  left: 0px;
  top: 0px;
  bottom: 0px;
}

#sidebar_content {
  overflow: auto;
  position: absolute;
  font-size: 13px;
  line-height: 14px;
  top: 29px;
  bottom: 0px;
  left: 0px;
  right: 0px;
}

.sidebar_title {
  margin: 0px;
  padding: 3px 6px;
  height: 29px;
  font-size: 14px;
  line-height: 15px;
  border-bottom: 1px solid black;
  background: #bbb;
}

.browse_heading {
  margin: 0px;
  padding: 3px 6px;
  border: 1px solid #ccc;
  background: #ddd;
}

.browse_details {
  margin: 0px;
  padding: 0px 6px;
}

.search_results_heading {
  margin: 0px;
  padding: 3px 6px;
  border: 1px solid #ccc;
  background: #ddd;
}

.search_results_entry {
  margin: 0px;
  padding: 2px 6px;
}

.search_results_error {
  margin: 0px;
  padding: 2px 6px 0px;
  color: #f00;
}

.search_help {
  font-size: 10px;
  line-height: 1em;
  margin-top: 3px;
  margin-bottom: 0px;
}

.search_searching {
  margin-top: 5px;
  margin-bottom: 5px;
}

.olControlAttribution {
  display: none !important;
}

/* inbox and messaging stuff */
.inbox-row-unread .inbox-subject {
	font-weight: bold;
}

/* rails error field stuff */

.fieldWithErrors {
  padding: 2px;
  background-color: red;
  display: table;
}

#error {
  border: 1px solid red;
  padding: 7px;
  background-color: #fff0f0;
  margin-bottom: 20px;
}

#warning {
  border: 1px solid orange;
  padding: 7px;
  background-color: #fff6f0;
  margin-bottom: 20px;
}

#notice {
  border: 1px solid green;
  padding: 7px;
  background-color: #f0fff0;
  margin-bottom: 20px;
}

#errorExplanation {
  width: 400px;
  border: 2px solid red;
  padding: 7px;
  padding-bottom: 12px;
  margin-bottom: 20px;
  background-color: #f0f0f0;
}

#errorExplanation h2 {
  text-align: left;
  font-weight: bold;
  padding: 5px 5px 5px 15px;
  font-size: 12px;
  margin: -7px;
  background-color: #c00;
  color: #fff;
}

#errorExplanation p {
  color: #333;
  margin-bottom: 0px;
  padding: 5px;
}

#errorExplanation ul li {
  font-size: 12px;
  list-style: square;
}

input[type="text"], input[type="password"], textarea {
  border: 1px solid black;
}

input[type="submit"] {
  border: 1px solid black;
}

#accountForm td {
	padding-bottom:10px;
}

.fieldName {
	text-align:right;
	font-weight:bold;
}


.nohome .location {
  display: none;
}

#homerow .message {
  display: none;
}

.nohome .message {
  display: inline !important;
}

.minorNote {
	font-size:0.8em;
}

.nowrap {
  white-space: nowrap;
}

#map #popup p {
  margin: 0px;
  padding: 2px;
}

#permalink {
  z-index:10000;
  position:absolute;
  bottom:15px;
  right:15px;
  font-size:smaller;
  text-align: right;
}

#attribution {
  display: none;
}

.export_heading {
  margin: 0px;
  padding: 3px 6px;
  border: 1px solid #ccc;
  background: #ddd;
}

.export_bounds {
  width: 100%;
  text-align: center;
}

.export_bound {
  margin: 5px;
}

.export_details {
  padding: 2px 6px;
}

#export_osm {
  display: none;
}

#export_mapnik {
  display: none;
}

#export_osmarender {
  display: none;
}

.export_hint {
  padding: 0px 12px;
  font-style: italic;
}

.export_buttons {
  width: 100%;
  text-align: center;
}

#noscript {
  z-index: 20000000;
  position: absolute;
  top: 15px;
  left: 15px
}

abbr.geo {
  border-bottom: none;
}

img.user_image {
  width: 100px;
  border: 1px solid black;
}

img.user_thumbnail {
  width: 50px;
  border: 1px solid black;
}

